[package]
name = "json_string"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { version = "2.6.0", features = ["serde"] }
itertools = "0.13.0"
num = "0.4.3"
serde_json = "1.0.132"
serial_test = "3.2.0"

[lints.clippy]
let_and_return = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
must_use_candidate = "allow"
missing_inline_in_public_items = "allow"
std_instead_of_core = "allow"
mod_module_files = "allow"
self_named_module_files = "allow"
too_many_arguments = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

pedantic = { level = "warn", priority = -1 }