[package]
name = "json_string"
version = "0.1.6"
edition = "2021"
description = "Format JSON string so that `serde_json` can understand it."
keywords = ["serde", "string", "json"]
authors = ["Amir Abdin <amab8901@protonmail.com>"]
repository = "https://github.com/gapitio/json_string"
documentation = "https://docs.rs/json_string"
readme = "README.md"
license = "MIT OR Apache-2.0"
rust-version = "1.82.0"

[dependencies]
anyhow = "1.0.94"
indexmap = { version = "2.7.0", features = ["serde"] }
itertools = "0.13.0"
num = "0.4.3"
serde_json = "1.0.133"
serial_test = "3.2.0"

[lints.clippy]
let_and_return = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
must_use_candidate = "allow"
missing_inline_in_public_items = "allow"
std_instead_of_core = "allow"
mod_module_files = "allow"
self_named_module_files = "allow"
too_many_arguments = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

pedantic = { level = "warn", priority = -1 }
